# bgmi-ng

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  alembic.ini  pyproject.toml  readme.md  setup.cfg
.ci/: azure-pipelines.yml
.ci/jobs/: build-docs.yaml  lint.yaml  unittest.yaml
.ci/templates/: install-project.yaml  job.yaml
.ci/templates/jobs/: lint.yaml
.ci/templates/steps/: install-project.yaml
.github/: codecov.yaml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yaml  lint.yaml  unittest.yaml  update-pre-commit.yaml
bgmi/: __init__.py
bgmi/backend/: alembic.ini  sqlite.py
bgmi/backend/migrations/: env.py
bgmi/backend/migrations/versions/: 1d0d6c4111d6_add_episode.py  c6a7c781b99b_init.py
bgmi/core/: __init__.py  application.py  namespace.py  series.py  subscription.py
bgmi/db/: __init__.py  table.py
bgmi/exc/: __init__.py
bgmi/helper/: abstract.py
bgmi/migrations/: env.py
bgmi/migrations/versions/: c6a7c781b99b_init.py
bgmi/model/: __init__.py  config.py  series.py  subtitle.py  update_time.py
bgmi/protocol/: __init__.py  backend.py  output.py  source.py  strainer.py
bgmi3/: __init__.py
bgmi3/backend/: alembic.ini  sqlite.py
bgmi3/backend/migrations/: env.py
bgmi3/core/: __init__.py  application.py  namespace.py  series.py  subscription.py
bgmi3/db/: __init__.py  table.py
bgmi3/exc/: __init__.py
bgmi3/helper/: __init__.py
bgmi3/model/: __init__.py  bangumi_base.py  config.py  series.py  status.py
bgmi3/protocol/: __init__.py  backend.py  output.py  source.py  strainer.py
docs/source/: conf.py  config.rst  index.rst  output.rst  source.rst
docs/source/_autoapi/python/: class.rst  exception.rst  module.rst
examples/: config.toml  config.yml  output.py  setup.py  source.py  test_output.py  test_source.py
tests/: test_a.py
tests/backend/: test_sqlite.py
tests/core/: test_application.py
tests/helper/: test_abs.py
