[tool.poetry]
name = "bgmi"
version = "3.0.0-alpha.0"
description = "BGmi is a cli tool for subscribed bangumi."
keywords = ['bangumi', 'bgmi', 'feed']
authors = ["RicterZ <ricterzheng@gmail.com>", "Trim21 <i@trim21.me>"]
readme = 'readme.md'
license = "MIT"
repository = 'https://github.com/BGmi/BGmi'
homepage = 'https://github.com/BGmi/BGmi'
documentation = "https://bgmi-ng.readthedocs.io/"
classifiers = [
  'Development Status :: 1 - Planning',
  'Intended Audience :: End Users/Desktop',
  'Natural Language :: Chinese (Simplified)',
  'License :: OSI Approved :: MIT License',
  'Operating System :: MacOS :: MacOS X',
  'Operating System :: POSIX :: Linux',
  'Operating System :: Microsoft :: Windows',
  'Environment :: Console',
  'Topic :: Multimedia :: Video',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.6',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: Implementation :: PyPy',
  'Programming Language :: Python :: Implementation :: CPython',
  'Typing :: Typed',
]
packages = [{ include = "bgmi" }]

[tool.poetry.dependencies]
python = "^3.6"
# dependencies
stevedore = "==3.2.0"
pydantic = "==1.5.1"
sqlalchemy = "==1.3.18"
alembic = "==1.4.2"
importlib_metadata = "==1.7.0"
sphinx = { version = '==3.1.1', optional = true }
sphinx-rtd-theme = { version = '==0.5.0', optional = true }
#sphinxcontrib-httpdomain =  { version = '1.7.0', optional = true }
#sphinxcontrib-httpexample =  { version = '0.10.3', optional = true }
#sphinx-issues = { version = '1.2.0', optional = true }
sphinx-autoapi = { version = "==1.4.0", optional = true }
sphinx-copybutton = { version = "==0.2.12", optional = true }

[tool.poetry.extras]
docs = [
  'sphinx',
  'sphinx-rtd-theme',
  #  'sphinxcontrib-httpdomain',
  #  'sphinxcontrib-httpexample',
  #  'sphinx-issues',
  'sphinx-autoapi',
  'sphinx-copybutton',
]

[tool.poetry.dev-dependencies]
# lint
mypy = '==0.782'
pre-commit = { version = "==2.5.1", python = ">=3.7" }
black = '19.10b0'
# test
pytest = "==6.2.2"
pytest-rerunfailures = "9.0"
pytest-mock = "==3.1.1"
coverage = '5.1'
requests = "==2.24.0"
flake8 = "==3.8.3"
flake8-commas = "2.0.0"
flake8-comprehensions = "3.2.3"
flake8-mutable = "1.2.0"
blacken-docs = {version = "1.7.0", python = ">=3.7"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
