[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "bgmi"
version = "0.0.1-alpha.0"
description = "BGmi is a cli tool for subscribed bangumi."
keywords = ['bangumi', 'bgmi', 'feed']
authors = ["RicterZ <ricterzheng@gmail.com>", "Trim21 <i@trim21.me>"]
readme = 'readme.md'
license = "MIT"
repository = 'https://github.com/BGmi/BGmi'
homepage = 'https://github.com/BGmi/BGmi'
documentation = "https://bgmi-ng.readthedocs.io/"
classifiers = [
  'Development Status :: 1 - Planning',
  'Intended Audience :: End Users/Desktop',
  'Natural Language :: Chinese (Simplified)',
  'License :: OSI Approved :: MIT License',
  'Operating System :: MacOS :: MacOS X',
  'Operating System :: POSIX :: Linux',
  'Operating System :: Microsoft :: Windows',
  'Environment :: Console',
  'Topic :: Multimedia :: Video',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.6',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: Implementation :: PyPy',
  'Programming Language :: Python :: Implementation :: CPython',
  'Typing :: Typed',
]
packages = [{ include = "bgmi" }]

[tool.poetry.dependencies]
python = "^3.6.1"
# dependencies
stevedore = "==3.2.0"
pydantic = "==1.5.1"
sqlalchemy = "==1.3.18"
alembic = "==1.4.2"
importlib_metadata = "==1.7.0"
# docs
sphinx = { version = '==3.1.1', optional = true }
sphinx-rtd-theme = { version = '==0.5.0', optional = true }
sphinx-autoapi = { version = "==1.4.0", optional = true }
sphinx-copybutton = { version = "==0.2.12", optional = true }
sphinx-issues = { version = "^1.2.0", optional = true }

[tool.poetry.extras]
docs = [
  'sphinx',
  'sphinx-autoapi',
  'sphinx-copybutton',
  'sphinx-issues',
  'sphinx-rtd-theme',
]

[tool.poetry.dev-dependencies]
# tests
pytest = "==6.2.2"
pytest-rerunfailures = "9.1.1"
pytest-mock = "==3.1.1"
requests = "==2.24.0"
requests-cache = "0.5.2"
# lint
flake8 = "==3.9.0"
flake8-2020 = "1.6.0"
flake8-bugbear = "==21.3.2"
flake8-comprehensions = "==3.4.0"
flake8-mutable = "1.2.0"
flake8-pep3101 = "1.3.0"
flake8-pytest-style = "==1.4.0"
coverage = { version = "==5.5", extras = ['toml'] }
pre-commit = '==2.11.1'
mypy = { version = "==0.812", markers = "implementation_name != 'pypy'" }

[tool.coverage.report]
exclude_lines = [
  'pragma: no cover',
  'if TYPE_CHECKING:',
  'if __name__ == "__main__":',
  'if typing.TYPE_CHECKING:',
  'raise NotImplementedError'
]

[tool.pytest.ini_options]
addopts = '-v --durations=10'
junit_family = 'legacy'
